# talent-plan

courses/dss/: .gitignore  Makefile  check.sh  repeat_test_until_error  repeat_test_until_error.rs
courses/dss/labcodec/: Cargo.toml
courses/dss/labrpc/: Cargo.toml
courses/dss/labrpc/benches/: rpc.rs
courses/dss/labrpc/examples/: echo.rs
courses/dss/labrpc/src/: error.rs  lib.rs
courses/dss/percolator/: Cargo.toml
courses/dss/percolator/src/: server.rs
courses/dss/raft/: Cargo.toml  README.md
courses/dss/raft/src/: lib.rs
courses/dss/raft/src/kvraft/: config.rs  errors.rs  server.rs  tests.rs
courses/dss/raft/src/proto/: mod.rs  raft.proto
courses/dss/raft/src/raft/: candidate.rs  common.rs  config.rs  election.rs  errors.rs  follower.rs  handle.rs  inner.rs  leader.rs  logs.rs  message_handler.rs  mod.rs  outdated_message.rs  raft_impl.rs  role.rs  rpc.rs  sender.rs  sink.rs  tests.rs
courses/dss/raft/src/raft/handle/: election.rs  handle.rs  logs.rs  message_handler.rs  mod.rs  peer.rs
courses/dss/raft/tests/: test_backup_2b.rs  test_basic_agree_2b.rs  test_concurrent_starts_2b.rs  test_count_2b.rs  test_fail_agree_2b.rs  test_fail_no_agree_2b.rs  test_figure_8_2c.rs  test_figure_8_unreliable_2c.rs  test_initial_election_2a.rs  test_many_election_2a.rs  test_persist_2c_1.rs  test_persist_2c_2.rs  test_persist_2c_3.rs  test_reelection_2a.rs  test_rejoin_2b.rs  test_reliable_churn_2c.rs  test_snapshot_basic_2d.rs  test_snapshot_install_2d.rs  test_snapshot_install_crash_2d.rs  test_snapshot_install_unreliable_2d.rs  test_snapshot_install_unreliable_crash_2d.rs  test_unreliable_agree_2c.rs  test_unreliable_churn_2c.rs  tests.rs
courses/dss/raft/tests/common/: config.rs  mod.rs
