[package]
name = "raft"
version = "0.1.0"
authors = [
    "Neil Shen <overvenus@gmail.com>",
    "ShuNing <nolouch@gmail.com>",
    "Connor <zbk602423539@gmail.com>",
    "庄天翼 <zty0826@gmail.com>",
    "MIT 6.824 <6824-staff@lists.csail.mit.edu>"
]
edition = "2018"
publish = false

[dependencies]
async-trait = "0.1"
futures = "0.3"
futures-timer = "3.0"
log = "0.4"
prost = "0.11.8"
prost-derive = "0.11.8"
rand = "0.8"
tokio = { version = "1.26.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["attributes"] }
num = "0.4"
either = "1.6"
assert2 = "0.3"
function_name = "0.2"
derive-new = "0.5"
typed-builder = "0.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
derive_more = "0.99"
more-asserts = "0.3.1"
uuid = { version = "1.3.0", features = ["v4"] }
dashmap = "5.4.0"

labcodec = { path = "../labcodec" }
labrpc = { path = "../labrpc" }
linearizability = { path = "../linearizability"}
futures-concurrency = "7.4.3"
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
sender-sink = "0.2.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "ansi"] }

[build-dependencies]
prost-build = "0.11.8"
